--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:coverage": "jest --collectCoverage",
+    "test": "tsc && jest",
+    "test:coverage": "tsc && jest --collectCoverage",
     "dev": "nodemon ./dist/index.js -e ts --exec \"npm run compile\"",
     "build": "tsc",
     "compile": "tsc && node ./dist/index.js",
